# Evaluaciones_Compi

./: .gitignore
examen_1/Lexer/: README  expr_lexer.h
examen_1/Lexer/fa/: comments.jff  constants.jff  expr_lexer.fa2l  identifiers.jff  operators.jff  start.jff
examen_1/Lexer/tests/: CMakeLists.txt  test_lexer.cpp
examen_1/Parser/: expr_lexer.h  expr_parser.cpp  expr_parser.h  expr_symbols.h  grammar.txt
examen_1/Parser/samples/: assign.txt  multiple.txt  print.txt
examen_1/Parser/tests/: CMakeLists.txt  test_parser.cpp
examen_2/: README.md  spl_ast.h  spl_interp.cpp  spl_interp.h
examen_2/tests/: CMakeLists.txt  test_ast.cpp
prueba_1/: const_lexer.h
prueba_1/DFA/: comments.jff  const_lexer.fa2l  numeric_constants.jff
prueba_1/tests/: CMakeLists.txt  test_lexer.cpp
prueba_2/: Grammar_Corrections.txt  grammar.txt  lexer.h  parser.cpp  parser.h
prueba_2/tests/: CMakeLists.txt  test_parser.cpp
